@@ -3,6 +3,9 @@ Change history for translation-utility
 ================================================================================
 
 DONE:
+9/22/08 - add info to exception dialog (version, stack trace, etc), to be reported to phethelp
+9/22/08 - replace JOptionPane with custom ExceptionDialog for notifying the user about exceptions
+9/22/08 - fix title on dialog that reports non-fatal exceptions
 ********* version 1.02.00 (24619)
 9/21/08 - comparison of SVN revision numbers in update feature was "remote != local", should be "remote > local" so that dev versions aren't confused
 9/21/08 - workaround for problem with "Test" feature, couldn't find manifest in Offline JAR files after they had been modified by deploy-translation task
